<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView20"
            android:textSize="20sp"
            android:textStyle="normal|bold"
            android:textAlignment="center"
            android:layout_marginTop="20dp" />
        <RadioGroup
            android:id="@+id/radiogroup_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <RadioButton
                android:id="@+id/account_cash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_cash"
                tools:layout_marginTop="20dp" />
            <RadioButton
                android:id="@+id/account_stock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_stock" />
        </RadioGroup>

        <Button
            android:text="SUBMIT"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:id="@+id/submit_btn"
            android:textAlignment="center"
            android:layout_marginTop="100dp"
            android:layout_gravity="center"
            android:textStyle="normal|bold" />

    </LinearLayout>
</LinearLayout>